[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scene/Inizio.gd" type="Script" id=1]
[ext_resource path="res://Immagini/Personaggio/PlayerMan.png" type="Texture" id=2]
[ext_resource path="res://Immagini/Mercante/mercanteIdle.png" type="Texture" id=3]
[ext_resource path="res://Immagini/MappaPrincipale/Portale.png" type="Texture" id=4]
[ext_resource path="res://Fonts/PTSerif-Italic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scene/DialogBox.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=14]
resource_name = "MercanteIdle 2"
length = 0.601
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("../MercanteIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 )
}

[sub_resource type="Animation" id=15]
resource_name = "IncontroMercante"
length = 1.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerMan:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.35, 0.45, 0.55, 0.65, 0.75, 0.85 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 16, 15, 14, 13, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerMan:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.15, 0.2, 0.25, 0.35, 0.5, 0.65, 0.8, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 30, 464 ), Vector2( 41, 464 ), Vector2( 69, 464 ), Vector2( 74, 457 ), Vector2( 115, 424 ), Vector2( 137, 360 ), Vector2( 160.667, 322.667 ), Vector2( 183.556, 288.889 ), Vector2( 218.185, 256.296 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerMan:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.35, 0.5, 0.65, 0.8, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ), Vector2( 0.35, 0.35 ), Vector2( 0.3, 0.3 ), Vector2( 0.25, 0.25 ), Vector2( 0.2, 0.2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MercanteIdle:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.95, 1.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 281, 233 ), Vector2( 281, 240 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MercanteIdle:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.95 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=16]
resource_name = "MercanteIdle"
length = 0.601
loop = true

[sub_resource type="Animation" id=17]
resource_name = "RitornoAlLivello"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerMan:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 16, 15, 14, 13, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerMan:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 295, 424 ), Vector2( 243, 360 ), Vector2( 225.667, 322.667 ), Vector2( 228.556, 288.889 ), Vector2( 218.185, 256.296 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerMan:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ), Vector2( 0.35, 0.35 ), Vector2( 0.3, 0.3 ), Vector2( 0.25, 0.25 ), Vector2( 0.2, 0.2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MercanteIdle:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.95, 1.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 281, 233 ), Vector2( 281, 240 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MercanteIdle:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.95 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=18]
resource_name = "idle"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerMan:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1 ]
}

[sub_resource type="DynamicFont" id=19]
size = 12
font_data = ExtResource( 5 )

[node name="Inizio" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 272.0
margin_top = 219.0
margin_right = 296.0
margin_bottom = 264.0
custom_styles/panel = SubResource( 13 )

[node name="MercanteIdle" type="Sprite" parent="."]
visible = false
position = Vector2( 281, 240 )
scale = Vector2( 0.19, 0.19 )
texture = ExtResource( 3 )
flip_h = true
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="MercanteIdle"]
"anims/MercanteIdle 2" = SubResource( 14 )

[node name="PlayerMan" type="Sprite" parent="."]
position = Vector2( 30, 464 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
flip_h = true
hframes = 6
vframes = 5
frame = 17

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IncontroMercante = SubResource( 15 )
anims/MercanteIdle = SubResource( 16 )
anims/RitornoAlLivello = SubResource( 17 )
anims/idle = SubResource( 18 )

[node name="Portale" type="Sprite" parent="."]
position = Vector2( 21, 443 )
scale = Vector2( 1.04, 1 )
texture = ExtResource( 4 )

[node name="DialogBox" parent="." instance=ExtResource( 6 )]
position = Vector2( 238, 176 )

[node name="Label2" type="Label" parent="DialogBox"]
margin_left = 57.0
margin_top = 22.0
margin_right = 103.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
text = "press r"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
